--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@mdi/font": "^7.3.67",
     "sass": "^1.69.5",
     "vuetify": "^3.4.0-beta.1"
   }
