--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.3.67",
+    "firebase": "^10.7.0",
     "sass": "^1.69.5",
     "vuetify": "^3.4.0-beta.1"
   }
